--- a/PartCommander/TODO.txt
+++ b/PartCommander/TODO.txt
@@ -1,2 +1,2 @@
 - clear any active highlighting before switching vessels
-- make window visibility persist
+- add multiple "popoff" part monitoring windows
