--- a/PartCommander/TODO.txt
+++ b/PartCommander/TODO.txt
@@ -1,1 +1,3 @@
-Testing Git merging.
+- create persistent settings window
+- add optional Blizzy toolbar support
+- add hotkey combo for showing/hiding
